--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -2,4 +2,24 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
+  padding: 1.2em 2em 1.5em;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+.button {
+  align-self: flex-start;
+  min-width: 10em;
+  padding: 0.5em;
+  font-size: 0.55em;
+  border-radius: 1.2em;
+  border: none;
+  background-color: rgb(8, 8, 8);
+  color: rgb(251, 251, 251);
+  cursor: pointer;
+  transition: transform 50ms ease-in;
+}
+
+.button:active {
+  transform: scale(0.95);
 }
