--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,5 +1,38 @@
 .row {
   display: flex;
-  gap: 12px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 15px;
+  width: 80%;
   text-transform: capitalize;
+}
+
+.name {
+  flex-basis: 40%;
+  flex-grow: 2;
+}
+
+.number {
+  flex-basis: 30%;
+  flex-grow: 1;
+}
+
+.buttonDelete {
+  align-self: flex-end;
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  border: none;
+  font-size: 0.45em;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  text-transform: uppercase;
+  color: rgb(245, 245, 245);
+  background-color: rgb(10, 10, 10);
+  transition: transform 75ms ease-in;
+}
+
+.buttonDelete:active {
+  transform: scale(0.9);
 }
